--- a/css/style.css
+++ b/css/style.css
@@ -253,9 +253,23 @@ body {
   left: 0;
   top: 0;
   width: 100%;
-  height: 50%;
+  height: 80%;
   overflow: auto;
   background-color: rgba(0, 0, 0, 0.7);
+}
+
+.close-icon-c {
+  color: #aaa;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+}
+
+.close-icon-c:hover,
+.close-icon-c:focus {
+  color: black;
+  text-decoration: none;
+  cursor: pointer;
 }
 
 ::selection {
